# trajopt

./: .gitignore  .hgignore  CMakeLists.txt  extract_file.py  make_eclipse_project.sh
belief_examples/: acc_traj20.npy  barrett-env.py  barrett.py  point.py  three_links.py  three_links_BiRRT.py
benchmarks/: clean_sim_data.rb  data.html  model.rb  process_sim_data.rb  result  result2  result_with_initial_pen_100  sim.rb
benchmarks/needle_steering/: .rvmrc  .~lock.results_18 (copy).csv#  .~lock.results_19.csv#  Gemfile  clear_records.rb  model.rb  mongoid.yml  new_points.txt  new_points_10000.txt  new_points_2.txt  points_100000.txt  points_2.txt  process_gen_pts.rb  process_sim_data.rb  results_1  results_18 (copy).csv  results_18.csv  results_19.csv  results_29.csv  sim.rb
benchmarks/needle_steering/genpts/: CMakeLists.txt  genpts.cpp
benchmarks/needle_steering/scaleobj/: Makefile  scaleobj.cpp
cmake/modules/: FindGUROBI.cmake  FindQwt.cmake  Findmlpack.cmake
data/: barrett.env.xml  barrett_sensor_wall.env.xml  barrett_traj.npy  barrett_traj2.npy  barrett_traj3.npy  baxter.env.xml  baxter.robot.xml  box3d.robot.xml  boxes.env.xml  car-rrt.txt  channel.env.xml  four_links.env.xml  four_links.robot.xml  four_links_2.env.xml  needlebot.xml  point.env.xml  point.robot.xml  prostate.env.xml  raven-box.env.xml  raven-box.xml  raven.env.xml  raven_traj.txt  three_links.env.xml  three_links.robot.xml  three_links_2.robot.xml  three_links_BiRRT.xml  three_links_obstacles.env.xml  wam7.kinbody.xml
data/plys/: arteriesBaseLeft.ply  arteriesBaseRight.ply
data/prostate_data/plys/: arteriesTubeLeft.ply  arteriesTubeRight.ply  bladder.ply  corpusCavernosum.ply  cowpersGlands1.ply  cowpersGlands2.ply  dermis.ply  epidermis.ply  glan.ply  hypodermis.ply  pelvis.ply  prostate.ply  urethra.ply
data/prostate_data/wrls/: arteriesTubeLeft.wrl  bladder.wrl  corpusCavernosum.wrl  cowpersGlands1.wrl  dermis.wrl  epidermis.wrl  glan.wrl  (+4 more)
data/wrls/: arteriesBaseLeft.wrl  arteriesBaseRight.wrl  arteriesTubeRight.wrl  cowpersGlands2.wrl  hypodermis.wrl  urethra.wrl
exp/: grasp_approach.py  test.py  test.xml  test2.py  test2.xml  wamtest1.env.xml
exp/data/: box0.kinbody.xml
misc_scripts/: grasp_approach.py  result
src/: CMakeLists.txt  macros.h  numpy_utils.hpp
src/bsp/: CMakeLists.txt  belief_collision.hpp  belief_collision_constraint.hpp  belief_collision_cost.hpp  belief_collision_plotter_mixin.hpp  belief_constraint.hpp  belief_func.hpp  belief_func_types.hpp  bsp.cpp  bsp.hpp  bsp_optimizer_task.cpp  bsp_optimizer_task.hpp  bsp_osg_plotter.hpp  bsp_planner.hpp  bsp_problem_helper.hpp  bsp_problem_helper_base.hpp  bsp_qt_plotter.cpp  bsp_qt_plotter.hpp  common.hpp  communicate.h  constraints.hpp  costs.cpp  costs.hpp  ekf_belief_func.hpp  gnuplot_i.cc  gnuplot_i.hpp  observe_func.hpp  openrave_utils.hpp  optimizers.cpp  optimizers.hpp  plotter.hpp  problem_state.hpp  state_func.hpp  toy.cpp  toy.hpp  toy_main.cpp  toy_optimizer_task.cpp  toy_optimizer_task.hpp  toy_plotter.cpp  toy_plotter.hpp  (+4 more)
src/bsp/collision/: belief_collision.cpp  belief_collision.hpp  belief_collision_checker.cpp  belief_collision_checker.hpp  belief_collision_evaluator.hpp  belief_continuous_collision_collector.cpp  belief_continuous_collision_collector.hpp  belief_continuous_collision_evaluator.hpp  belief_discrete_collision_collector.cpp  belief_discrete_collision_collector.hpp  belief_discrete_collision_evaluator.hpp  collision.hpp  sigma_hull_cast_shape.cpp  sigma_hull_cast_shape.hpp  sigma_hull_shape.cpp  sigma_hull_shape.hpp  utils.cpp  utils.hpp
src/bsp/types/: belief_func.hpp  bsp_typedefs.hpp  observe_func.hpp  state_func.hpp
src/bsp_qt/: CMakeLists.txt  bsp_optimizer_task.cpp  bsp_optimizer_task.hpp  bsp_qt_plotter.hpp
src/bsp_sandbox/: CMakeLists.txt  arm.cpp  arm.hpp  barrett_robot.cpp  barrett_robot.hpp  barrett_robot_forward_kinematics.hpp  baxter_robot.cpp  baxter_robot.hpp  baxter_robot_forward_kinematics.hpp  car.cpp  car.hpp  car_static.cpp  car_static.hpp  four_links_robot.cpp  four_links_robot.hpp  geometry_2d.cpp  geometry_2d.hpp  geometry_2d_test.cpp  needle.cpp  needle.hpp  plot_sigmahull.cpp  point_robot.cpp  point_robot.hpp  point_robot_forward_kinematics.hpp  raven.cpp  raven.hpp  raven_forward_kinematics.hpp  ravenpy.cpp  robot.cpp  tb_angles.h  three_links_robot.cpp  three_links_robot.hpp  three_links_robot_forward_kinematics.hpp  toy.cpp  toy.hpp  trunc.cpp  trunc.h  trunc2.cpp
src/bsp_sandbox/tmp/: bsp_planner.hpp  toy.cpp  toy.hpp
src/needle_steering/: CMakeLists.txt  constraints.cpp  costs.cpp  local_configuration.cpp  needle_problem_helper.cpp  needle_problem_instance.cpp  needle_problem_planner.cpp  needle_steering.cpp  needle_steering.hpp  traj_plotter.cpp  utils.cpp
src/needle_steering_rrt/: CMakeLists.txt  callisto.h  collision.h  interface.cpp  interface.h  main.cpp  matrix.h  planner.cpp  planner.h  planner2D.cpp  planner2D.h  planner3D.cpp  planner3D.h  utils.h
src/osgviewer/: osgviewer.cpp  osgviewer.hpp
src/sandbox/: CMakeLists.txt  dubins_car.cpp  incremental_rb.hpp  needle_steering.cpp  needle_steering.hpp  prostate.cpp  sqp_test.cpp
src/sco/: CMakeLists.txt  bpmpd_interface.cpp  bpmpd_interface.hpp  expr_op_overloads.hpp  expr_ops.cpp  expr_ops.hpp  gurobi_interface.cpp  gurobi_interface.hpp  modeling.cpp  modeling.hpp  modeling_utils.cpp  modeling_utils.hpp  optimizers.cpp  optimizers.hpp  sco_common.hpp  solver_interface.hpp
src/trajopt/: CMakeLists.txt  belief.cpp  belief.hpp  belief_constraints.cpp  belief_constraints.hpp  bullet_collision_checker.cpp  bullet_collision_checker.hpp  collision_avoidance.cpp  collision_avoidance.hpp  collision_checker.cpp  collision_checker.hpp  collision_terms.cpp  collision_terms.hpp  common.hpp  configuration_space.cpp  configuration_space.hpp  kinematic_terms.hpp  plot_callback.cpp  problem_description.cpp  problem_description.hpp  robot_and_dof.cpp  robot_and_dof.hpp  trajectory_costs.cpp  trajectory_costs.hpp  trajoptpy.cpp
src/utils/: basic_array.hpp  config.cpp  config.hpp  eigen_conversions.hpp
(+16 files in other folders)
